--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   app:
     build:
@@ -6,13 +8,14 @@ services:
     container_name: pc-estoque
     ports:
       - "8000:8000"
-    volumes:
-      - .:/app
-    working_dir: /app
-    command: uvicorn app.api_main:app --host 0.0.0.0 --port 8000
+    environment:
+      - ENV=dev
     env_file:
-      - .env
+      - devtools/dotenv.dev
+    working_dir: /pc-estoque
+    command: ["uvicorn", "app.api_main:app", "--host", "0.0.0.0", "--port", "8000"]
     restart: unless-stopped
+
 
   sonarqube:
     image: sonarqube:latest
@@ -29,3 +32,16 @@ volumes:
   sonarqube_data:
   sonarqube_logs:
   sonarqube_extensions:
+
+# Comando para rodar o compose
+  #docker-compose up -d --build
+
+# Comando para rodar sonarqube
+  #docker-compose up -d sonarqube
+  
+# Comando para rodar a aplicação
+  #docker-compose up -d --build app
+
+# Comando para parar a aplicação
+  #docker-compose down
+
