--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,23 @@
+# Nome do projeto no SonarQube
 sonar.projectKey=pc-estoque
 sonar.projectName=pc-estoque
 sonar.projectVersion=1.0
-sonar.sources=app
-sonar.sourceEncoding=UTF-8
-sonar.python.pylint = true
-sonar python.flake8 = true
-# Caminho para o executável do Pylint (opcional, se não estiver no PATH)
-# sonar.python.pylintPath=/usr/local/bin/pylint
-# Caminho para o executável do Flake8 (opcional, se não estiver no PATH)
-# sonar.python.flake8Path=/usr/local/bin/flake8 
-sonar.exclusions= venv/**/*, .git/**/*, __pycache__/**/*, .pytest_cache/**/*
 
-# Gerar o token e depois colocar em variavel de ambiente.
-# export SONAR_TOKEN=<token gerado pelo Sonar no Docker>
-#SONAR_HOST_URL='http://localhost:9000' pysonar-scanner
+# Caminho do código-fonte
+sonar.sources=app
+
+# Codificação dos arquivos-fonte
+sonar.sourceEncoding=UTF-8
+
+# Ignorar arquivos e pastas que não devem ser analisados
+sonar.exclusions=venv/**/*, .git/**/*, __pycache__/**/*, .pytest_cache/**/*
+
+# Caminho do relatório de cobertura (se utilizar)
+sonar.python.coverage.reportPaths=coverage.xml
+
+# Executar o SonarQube Scanner
+# docker run --rm \
+#  -e SONAR_HOST_URL=http://host.docker.internal:9000 \
+#  -e SONAR_TOKEN="COLOCAR SEU TOKEN AQUI" \
+#  -v "$(pwd)":/usr/src \
+#  sonarsource/sonar-scanner-cli
