feat: atualiza a URL do banco de dados para usar asyncpg no docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,8 @@ services:
       - "8000:8000"
     environment:
       - ENV=dev
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/estoque_db
+      - APP_DB_URL=postgresql+asyncpg://admin:admin@db:5432/estoque_db
+
     env_file:
       - devtools/dotenv.dev
     depends_on:
