--- a/docker-compose-sonar.yml
+++ b/docker-compose-sonar.yml
@@ -1,12 +1,13 @@
-sonarqube:
-  image: sonarqube:latest
-  container_name: pc-sonarqube
-ports:
-  - "9000:9000"
-volumes:
-  - sonarqube_data:/opt/sonarqube/data
-  - sonarqube_logs:/opt/sonarqube/logs
-  - sonarqube_extensions:/opt/sonarqube/extensions
-restart: unless-stopped
-# Comando para rodar sonarqube
-#docker-compose up -d sonarqube
+services: 
+  sonarqube:
+    image: sonarqube:latest
+    container_name: pc-sonarqube
+  ports:
+    - "9000:9000"
+  volumes:
+    - sonarqube_data:/opt/sonarqube/data
+    - sonarqube_logs:/opt/sonarqube/logs
+    - sonarqube_extensions:/opt/sonarqube/extensions
+  restart: unless-stopped
+  # Comando para rodar sonarqube
+  #docker-compose up -d sonarqube
