--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     environment:
       - ENV=dev
       - APP_DB_URL=postgresql+asyncpg://admin:admin@db:5432/estoque_db
+      - APP_OPENID_WELLKNOWN=http://host.docker.internal:8080/realms/marketplace/.well-known/openid-configuration
     env_file:
       - devtools/dotenv.dev
     depends_on:
@@ -30,7 +31,6 @@ services:
     command:
       ["uvicorn", "app.api_main:app", "--host", "0.0.0.0", "--port", "8000"]
     restart: unless-stopped
-
 # Comando para rodar o compose
 #docker-compose up -d --build
 
