--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:latest
+    image: postgres:15
     container_name: pc-postgres
     ports:
       - "5432:5432"
