--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,7 @@ sonar.projectVersion=1.0
 
 # Caminho do código-fonte
 sonar.sources=app
+sonar.tests=tests
 
 # Codificação dos arquivos-fonte
 sonar.sourceEncoding=UTF-8
