chore: inclusão das docstrings nos endpoints e correções dos linters

--- a/docker-compose-sonar.yml
+++ b/docker-compose-sonar.yml
@@ -1,6 +1,6 @@
 services: 
   sonarqube:
-    image: sonarqube:latest
+    image: sonarqube:lts-community
     container_name: pc-sonarqube
     ports:
       - "9000:9000"
