feat: adiciona verificação e notificação de estoque baixo com worker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
     #volumes:
     #  - db_data:/var/lib/postgresql/data
     restart: unless-stopped
-# Comando para rodar o compose
-#docker-compose up -d --build
 
-# Comando para parar a aplicação
-#docker-compose down
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
